--- a/Randomflix/pelicula1.html
+++ b/Randomflix/pelicula1.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coda</title>
-    <link rel="stylesheet" href="../Randomflix/estiloindex1.css">
+    <link rel="stylesheet" href="../Randomflix/estiloindex3.css">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <header>
@@ -39,7 +45,32 @@
         </section>
     </main>
     <footer>
-        <!-- copiar el footer de index cuando este listo -->
+        <footer>
+            <section id="Cambiar_pag_y_contactos"> 
+                <!-- Cambiar de pagina -->
+                <!-- Falta darle disenio en css a esto de flex-->
+            
+                <div id="siguiente">
+                    <article><i class="fa-solid fa-arrow-left"></i></article>
+                    <article>1</article>
+                    <article>2</article>
+                    <article>3</article>
+                    <article>4</article>
+                    <article>5</article>
+                    <article><i class="fa-solid fa-arrow-right"></i></article>
+                </div>               
+                <!-- Contactos/Redes -->
+               <div id="redes">
+                    <p>Redes</p>
+                    <article><a href="https://www.instagram.com/?hl=es"><i class="fa-brands fa-instagram fa-lg" style="color: #8066cc;"></i></a></article>
+                    <article><a href="https://twitter.com/"><i class="fa-brands fa-twitter" style="color: #398e75;"></i></a></article>
+                    <article><a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a></article>
+                    <article><a href="https://mail.google.com/"><i class="fa-regular fa-envelope fa-bounce"></i></a></td></article>
+                    <article><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp fa-beat" style="color: #3dc29a;"></i></a></article>  
+                </div>      
+                    
+            </section>
+        </footer>
     </footer>
 </body>
 </html>
