--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KaleidoMovie</title>
     <!-- <link rel="icon" href="">  completar -->
-    <link rel="stylesheet" href="../estiloindex3.css">
+    <link rel="stylesheet" href="estiloindex3.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
     <link
@@ -26,7 +26,7 @@
         <!-- Titulo arriba a la derecha , dentro de la imagen con un logo-->
         <div id="Titulo" >            
             <article class="animate__animated animate__bounce">            
-                <img src="../Randomflix/img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
+                <img src="/img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
             </article>
             
         </div>
@@ -43,7 +43,7 @@
                 </article>
                 <!-- imagen lupa como boton -->
                 <article class="busca_recuadro1">
-                    <input type="image" src="../Randomflix/img/Lupa-removebg-preview.png" width="40px" height="40px">  
+                    <input type="image" src="/img/Lupa-removebg-preview.png" width="40px" height="40px">  
                 </article>
             </form> 
         </section>
