--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KaleidoMovie</title>
     <!-- <link rel="icon" href="">  completar -->
-    <link rel="stylesheet" href="estiloindex3.css">
+    <link rel="stylesheet" href="../estiloindex3.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
     <link
