--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Titulo arriba a la derecha , dentro de la imagen con un logo-->
         <div id="Titulo" >            
             <article class="animate__animated animate__bounce">            
-                <img src="/img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
+                <img src="img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
             </article>
             
         </div>
