--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KaleidoMovie</title>
     <!-- <link rel="icon" href="">  completar -->
-    <link rel="stylesheet" href="../estiloindex3.css">
+    <link rel="stylesheet" href="estiloindex3.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
     <link
@@ -43,7 +43,7 @@
                 </article>
                 <!-- imagen lupa como boton -->
                 <article class="busca_recuadro1">
-                    <input type="image" src="/img/Lupa-removebg-preview.png" width="40px" height="40px">  
+                    <input type="image" src="img/Lupa-removebg-preview.png" width="40px" height="40px">  
                 </article>
             </form> 
         </section>
@@ -53,61 +53,61 @@
                 <h2>Peliculas</h2>
                 <div class="grid-container">
                     <div class="grid-item">
-                        <a href="pelicula1.html"><img src="../Randomflix/img/Peliculas/Coda.jpg" alt="Coda"></a>
+                        <a href="pelicula1.html"><img src="img/Peliculas/Coda.jpg" alt="Coda"></a>
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 8 </div>
                         <h4>Coda</h4>
                         <p>2021</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/el_ultimo_traje.jpg" alt="El ultimo traje">
+                        <img src="../img/Peliculas/el_ultimo_traje.jpg" alt="El ultimo traje">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.1 </div>
                         <h4>El ultimo traje</h4>
                         <p>2017</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/the_artist.jpg" alt="The artist">
+                        <img src="img/Peliculas/the_artist.jpg" alt="The artist">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.9 </div>
                         <h4>The artist</h4>
                         <p>2011</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/whatever_works.jpg" alt="Whatever works">
+                        <img src="../img/Peliculas/whatever_works.jpg" alt="Whatever works">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.1 </div>
                         <h4>Whatever works</h4>
                         <p>2009</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/12_angry_men.jpg" alt="12 Angry men">
+                        <img src="../img/Peliculas/12_angry_men.jpg" alt="12 Angry men">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.8 </div>
                         <h4>12 Angry men</h4>
                         <p>1997</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/Fading_gigolo.jpg" alt="Fading Gigolo"> 
+                        <img src="img/Peliculas/Fading_gigolo.jpg" alt="Fading Gigolo"> 
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6.2 </div>
                         <h4>Fading Gigolo</h4>
                         <p>2013</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/See_No_Evil,_Hear_No_Evil.jpg" alt="See No Evil, Hear No Evil">
+                        <img src="img/Peliculas/See_No_Evil,_Hear_No_Evil.jpg" alt="See No Evil, Hear No Evil">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6.8 </div>
                         <h4>See No Evil, Hear No Evil</h4>
                         <p>1989</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/La_guerre_du_feu.jpg" alt="La guerre du feu">
+                        <img src="../img/Peliculas/La_guerre_du_feu.jpg" alt="La guerre du feu">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.3 </div>
                         <h4>La guerre du feu</h4>
                         <p>1981</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/Being_There.jpg" alt="Being There">
+                        <img src="../img/Peliculas/Being_There.jpg" alt="Being There">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.9 </div>
                         <h4>Being There</h4>
                         <p>1971</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../Randomflix/img/Peliculas/Hardcore_Henry.jpg" alt="Hardcore Henry">
+                        <img src="../img/Peliculas/Hardcore_Henry.jpg" alt="Hardcore Henry">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6.7 </div>
                         <h4>Hardcore Henry</h4>
                         <p>2015</p>
