--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p>2021</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/el_ultimo_traje.jpg" alt="El ultimo traje">
+                        <img src="img/Peliculas/el_ultimo_traje.jpg" alt="El ultimo traje">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.1 </div>
                         <h4>El ultimo traje</h4>
                         <p>2017</p>
@@ -71,7 +71,7 @@
                         <p>2011</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/whatever_works.jpg" alt="Whatever works">
+                        <img src="img/Peliculas/whatever_works.jpg" alt="Whatever works">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.1 </div>
                         <h4>Whatever works</h4>
                         <p>2009</p>
