--- a/index.html
+++ b/index.html
@@ -9,30 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
     <link    rel="stylesheet"   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
-
-/* Universal */
-*{
-    margin: 0px;
-    box-sizing: border-box;
-    font-weight: bold  ;    
-    text-decoration:none;
-    font-family: 'League Spartan', sans-serif;
-    color: black; 
-    
-    
-} 
-
-body{
-    background-color: #dfd0b8;;
-}
-/* De clase */
-.General{
-    background-color: #948979;
-    margin: 1px;   
-
-    </style>
 </head>
 <body>
     <header>        
@@ -98,7 +74,7 @@ body{
                         <p>2009</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/12_angry_men.jpg" alt="12 Angry men">
+                        <img src="img/Peliculas/12_angry_men.jpg" alt="12 Angry men">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.8 </div>
                         <h4>12 Angry men</h4>
                         <p>1997</p>
@@ -116,19 +92,19 @@ body{
                         <p>1989</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/La_guerre_du_feu.jpg" alt="La guerre du feu">
+                        <img src="img/Peliculas/La_guerre_du_feu.jpg" alt="La guerre du feu">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.3 </div>
                         <h4>La guerre du feu</h4>
                         <p>1981</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/Being_There.jpg" alt="Being There">
+                        <img src="img/Peliculas/Being_There.jpg" alt="Being There">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7.9 </div>
                         <h4>Being There</h4>
                         <p>1971</p>
                     </div>
                     <div class="grid-item">
-                        <img src="../img/Peliculas/Hardcore_Henry.jpg" alt="Hardcore Henry">
+                        <img src="img/Peliculas/Hardcore_Henry.jpg" alt="Hardcore Henry">
                         <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6.7 </div>
                         <h4>Hardcore Henry</h4>
                         <p>2015</p>
@@ -143,44 +119,44 @@ body{
             <h2>Cortos</h2>
             <div id="Cortos-flexbox">
                 <article class="flex-item1">
-                    <img src="../Randomflix/img/Cortos/Invention_of_love.jpg" alt="Invention_of_love">
+                    <img src="img/Cortos/Invention_of_love.jpg" alt="Invention_of_love">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6.4 </div>
                     <h4>Invention of love</h4>
                     <p>2010</p>                
                 </article>             
                 <article class="flex-item1">
-                    <img src="../Randomflix/img/Cortos/inercia.jpg" alt="Inercia">
+                    <img src="img/Cortos/inercia.jpg" alt="Inercia">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 9 </div>
                     <h4>Inercia</h4>
                     <p>2009</p>                
                 </article> 
                 <article class="flex-item2">
-                    <img src="../Randomflix/img/Cortos/Fresh_guacamole.jpg" alt="Guacamole">
+                    <img src="img/Cortos/Fresh_guacamole.jpg" alt="Guacamole">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 6 </div>
                     <h4>Fresh guacamole</h4>
                     <p>2013</p>                
                 </article> 
                 <article class="flex-item2">
-                    <img src="../Randomflix/img/Cortos/Le_cafe.jpg" alt="Le cafe">
+                    <img src="img/Cortos/Le_cafe.jpg" alt="Le cafe">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 8 </div>
                     <h4>Le cafe</h4>
                     <p>2007</p>                
                 </article> 
                 <article class="flex-item2">
                     <!-- mejorar esta imagen -->
-                    <img src="../Randomflix/img/Cortos/La_caja.png" alt="La caja">
+                    <img src="img/Cortos/La_caja.png" alt="La caja">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 9 </div>
                     <h4>La caja</h4>
                     <p>2007</p>                
                 </article> 
                 <article class="flex-item2">
-                    <img src="../Randomflix/img/Cortos/ilha_das_flores.jpg" alt="ilha das flores">
+                    <img src="img/Cortos/ilha_das_flores.jpg" alt="ilha das flores">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 9 </div>
                     <h4>Isla de las Flores</h4>
                     <p>1989</p>                
                 </article> 
                 <article class="flex-item1">
-                    <img src="../Randomflix/img/Cortos/el_empleo.jpg" alt="El empleo">
+                    <img src="img/Cortos/el_empleo.jpg" alt="El empleo">
                     <div class="start"><i class="fa-regular fa-star" style="color: #FFD43B;"></i> 7 </div>
                     <h4>El empleo</h4>
                     <p>2008</p>                
