--- a/pelicula1.html
+++ b/pelicula1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coda</title>
-    <link rel="stylesheet" href="../Randomflix/estiloindex3.css">
+    <link rel="stylesheet" href="estiloindex3.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fae5ac15d7.js" crossorigin="anonymous"></script>
     <link
@@ -23,7 +23,7 @@
         <!-- Titulo arriba a la derecha , dentro de la imagen con un logo-->
         <div id="Titulo">            
             <article>            
-                    <img src="../Randomflix/img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
+                    <img src="img/Logos para la web/logo_faro_negro_blanco.png" alt="KaleidoMovie" >
             </article>
             
         </div>
