--- a/pelicula1.html
+++ b/pelicula1.html
@@ -35,7 +35,7 @@
 
                 <h2>Coda</h2>
                 <p>2021</p>
-                <img src="../Randomflix/img/Peliculas/Coda.jpg" alt="Coda">
+                <img src="img/Peliculas/Coda.jpg" alt="Coda">
             </div>
             <div class="General">
                 <h3>Sinopsis</h3>
