--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=carpeta-especifica/" />
+    <meta http-equiv="refresh" content="0; url=Randomflix/" />
     <title>Redirection</title>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="carpeta-especifica/">link</a>.
+    If you are not redirected automatically, follow this <a href="Randomflix/">link</a>.
 </body>
 </html>
